# rag-system

./: .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml  test_api.py  test_casual.py  test_history.py  test_langchain_tuples.py
Documents/: Execution_Trace_v2.md  RAG_System_MVP_Sprint_Plan.docx
frontend/: package-lock.json  package.json
frontend/src/: App.js  api.js  index.css
frontend/src/components/: Auth.jsx  Chat.jsx  CustomCursor.jsx  Dashboard.jsx  Ingest.jsx
monitoring/prometheus/: prometheus.yml
src/: main.py
src/agents/: casual_chat.py  graph.py  intent_router.py  memory.py  planning.py  retrieval.py  state.py  structured.py  supervisor.py  synthesis.py  verification.py
src/api/: __init__.py  auth.py  database.py  rbac.py  repository.py  routes.py  schemas.py  services.py
src/database/: connection.py  models.py  test_connection.py
src/generation/: generator.py  router.py
src/ingestion/: __init__.py  chunker.py  db_connector.py  doc_loader.py  embedding.py  pipeline.py
src/retrieval/: dense_search.py  fusion.py  sparse_search.py
src/workers/: __init__.py  celery_app.py  ingestion_tasks.py
